# ci-plus-plus

./: .flake8  .gitignore  .gitpod.yml  .pylintrc  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.ci++/: main.yml  poetry-project.yml
.github/workflows/: main.yml
src/cixx/: __init__.py  __main__.py  _common.py  _expressions.py  _github_actions.py  _init_job.py  _normal_job.py  _reuseable_workflow.py  _transform.py  _validation.py  _yaml.py
tests/: test_cixx.py
tests/cixx.py/: test_expressions.py
