[tool.poetry]
name = "cixx"
version = "0.1.0"
description = ""
authors = ["James Duley <jagduley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
isort = "^5.10.1"
flake8-bugbear = "^22.1.11"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
